--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,20 +26,11 @@ jobs:
           sudo mv "$tmp" /etc/docker/daemon.json
           sudo systemctl restart docker.service
 
-      - name: Build, push, pack
+      - name: Build and push
         run: |
           docker login --username=${{ secrets.DOCKER_USERNAME }} --password "${{ secrets.DOCKER_PASSWORD }}"
           TZ="Asia/Shanghai"
           tag=$(date +'%Y.%m.%d')
           docker build --rm --no-cache --squash -t lanfanb/client7:$tag .
           docker push lanfanb/client7:$tag
-          docker run --name client7 -d lanfanb/client7:$tag
-          docker cp client7:/singularity.tar.xz singularity.$tag.tar.xz
-          docker stop client7
-
-      - name: Upload build
-        uses: actions/upload-artifact@v3
-        with:
-          name: singularity
-          path: singularity*.tar.xz
 
