--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,14 @@ jobs:
           docker login --username=${{ secrets.DOCKER_USERNAME }} --password "${{ secrets.DOCKER_PASSWORD }}"
           TZ="Asia/Shanghai"
           tag=$(date +'%Y.%m.%d')
-          docker build --rm --no-cache --squash -t lanfanb/siqbase:tools.$tag .
-          docker push lanfanb/siqbase:tools.$tag
+          docker build --rm --no-cache --squash -t lanfanb/siqbase:tools.$tag -f Dockerfile.centos .
+          docker run --name pod -d lanfanb/siqbase:tools.$tag
+          docker cp pod:/artifacts.tar.xz artifacts.tar.xz
+          docker stop pod
+
+      - name: Upload build
+        uses: actions/upload-artifact@v3
+        with:
+          name: artifacts
+          path: artifacts.tar.xz
 
