--- a/Dockerfile.centos
+++ b/Dockerfile.centos
@@ -66,23 +66,32 @@ source /opt/rh/devtoolset-11/enable ; \
 #./configure --prefix=/tools/qflow-1.4.98 ; \
 #make -j2 && make install ; \
 #export PATH=$OLDPATH ; \
-cd /data/src/OpenLane ; \
-mkdir -p /tools/OpenLane-$d/install ; \
-python3 -m venv --clear /tools/OpenLane-$d/install/venv ; \
-source /tools/OpenLane-$d/install/venv/bin/activate ; \
-pip3 install --trusted-host mirrors.tencentyun.com -i http://mirrors.tencentyun.com/pypi/simple --upgrade pip volare ; \
-pip3 install --trusted-host mirrors.tencentyun.com -i http://mirrors.tencentyun.com/pypi/simple -r dependencies/python/precompile_time.txt ; \
-pip3 install --trusted-host mirrors.tencentyun.com -i http://mirrors.tencentyun.com/pypi/simple -r dependencies/python/compile_time.txt ; \
-pip3 install --trusted-host mirrors.tencentyun.com -i http://mirrors.tencentyun.com/pypi/simple -r dependencies/python/run_time.txt ; \
-deactivate ; \
-rsync -az scripts /tools/OpenLane-$d/ ; \
-rsync -az flow.tcl /tools/OpenLane-$d/ ; \
-rsync -az configuration /tools/OpenLane-$d/ ; \
-echo 'set OL_INSTALL_DIR [file dirname [file normalize [info script]]]' > /tools/OpenLane-$d/install/env.tcl ; \
-echo 'set ::env(OPENLANE_LOCAL_INSTALL) 1'                             >> /tools/OpenLane-$d/install/env.tcl ; \
-echo 'set ::env(OL_INSTALL_DIR) "$OL_INSTALL_DIR"'                     >> /tools/OpenLane-$d/install/env.tcl ; \
-echo 'set ::env(PATH) "$OL_INSTALL_DIR/venv/bin:$OL_INSTALL_DIR/bin:$::env(PATH)"' >> /tools/OpenLane-$d/install/env.tcl ; \
-echo 'set ::env(VIRTUAL_ENV) "$OL_INSTALL_DIR/venv"'                   >> /tools/OpenLane-$d/install/env.tcl ; \
+#cd /data/src/OpenLane ; \
+#mkdir -p /tools/OpenLane-$d/install ; \
+#python3 -m venv --clear /tools/OpenLane-$d/install/venv ; \
+#source /tools/OpenLane-$d/install/venv/bin/activate ; \
+#pip3 install --trusted-host mirrors.tencentyun.com -i http://mirrors.tencentyun.com/pypi/simple --upgrade pip volare ; \
+#pip3 install --trusted-host mirrors.tencentyun.com -i http://mirrors.tencentyun.com/pypi/simple -r dependencies/python/precompile_time.txt ; \
+#pip3 install --trusted-host mirrors.tencentyun.com -i http://mirrors.tencentyun.com/pypi/simple -r dependencies/python/compile_time.txt ; \
+#pip3 install --trusted-host mirrors.tencentyun.com -i http://mirrors.tencentyun.com/pypi/simple -r dependencies/python/run_time.txt ; \
+#deactivate ; \
+#rsync -az scripts /tools/OpenLane-$d/ ; \
+#rsync -az flow.tcl /tools/OpenLane-$d/ ; \
+#rsync -az configuration /tools/OpenLane-$d/ ; \
+#echo 'set OL_INSTALL_DIR [file dirname [file normalize [info script]]]' > /tools/OpenLane-$d/install/env.tcl ; \
+#echo 'set ::env(OPENLANE_LOCAL_INSTALL) 1'                             >> /tools/OpenLane-$d/install/env.tcl ; \
+#echo 'set ::env(OL_INSTALL_DIR) "$OL_INSTALL_DIR"'                     >> /tools/OpenLane-$d/install/env.tcl ; \
+#echo 'set ::env(PATH) "$OL_INSTALL_DIR/venv/bin:$OL_INSTALL_DIR/bin:$::env(PATH)"' >> /tools/OpenLane-$d/install/env.tcl ; \
+#echo 'set ::env(VIRTUAL_ENV) "$OL_INSTALL_DIR/venv"'                   >> /tools/OpenLane-$d/install/env.tcl ; \
+#cd /data/src/gtkwave/gtkwave3-gtk3 ; \
+#./autogen.sh && ./configure --prefix=/tools/gtkwave-$d --enable-gtk3 ; \
+#make -j2 && make install ; \
+#cd /data/src/iverilog ; \
+#sh autoconf.sh && ./configure --prefix=/tools/iverilog-$d ; \
+#make -j2 && make install ; \
+#cd /data/src/verilator ; \
+#autoconf && ./configure --prefix /tools/verilator-$d ; \
+#make -j2 && make install ; \
 cd / ; \
 #tar -cJf /klayout-0.27.10.tar.xz -C /tools klayout-0.27.10 ; \
 #tar -cJf /lemon-1.3.1.tar.xz     -C /tools lemon-1.3.1     ; \
@@ -99,7 +108,10 @@ cd / ; \
 #tar -cJf /yosys-0.19.tar.xz      -C /tools yosys-0.19      ; \
 #tar -cJf /cvc-1.1.3.tar.xz       -C /tools cvc-1.1.3       ; \
 #tar -cJf /qflow-1.4.98.tar.xz    -C /tools qflow-1.4.98    ; \
-tar -cJf /OpenLane-$d.tar.xz     -C /tools OpenLane-$d     ; \
+#tar -cJf /OpenLane-$d.tar.xz     -C /tools OpenLane-$d     ; \
+#tar -cJf /gtkwave-$d.tar.xz      -C /tools gtkwave-$d      ; \
+#tar -cJf /iverilog-$d.tar.xz     -C /tools iverilog-$d     ; \
+#tar -cJf /verilator-$d.tar.xz    -C /tools verilator-$d    ; \
 #tar -cJf /artifacts.tar.xz -C /tools . ; \
 rm -rf /tools
 CMD ["/usr/sbin/init"]
