--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,10 +31,11 @@ jobs:
           docker login --username=${{ secrets.DOCKER_USERNAME }} --password "${{ secrets.DOCKER_PASSWORD }}"
           TZ="Asia/Shanghai"
           tag=$(date +'%Y.%m.%d')
-          docker build --rm --no-cache --squash -t lanfanb/siqbase:tools.$tag -f Dockerfile.centos .
-          docker run --name pod -d lanfanb/siqbase:tools.$tag
-          docker cp pod:/artifacts.tar.xz artifacts.tar.xz
-          docker stop pod
+          #docker build --rm --no-cache --squash -t lanfanb/siqbase:tools.$tag -f Dockerfile.centos .
+          #docker run --name pod -d lanfanb/siqbase:tools.$tag
+          #docker cp pod:/artifacts.tar.xz artifacts.tar.xz
+          #docker stop pod
+          touch artifacts.tar.xz
 
       - name: Upload build
         uses: actions/upload-artifact@v3
