--- a/Dockerfile.centos
+++ b/Dockerfile.centos
@@ -2,10 +2,6 @@ FROM docker.io/lanfanb/siqbase:centos.latest
 RUN mkdir /tools ; \
 export TZ="Asia/Shanghai" ; \
 export d=$(date +'%Y.%m.%d') ; \
-#for f in /data/release/centos/*.tar.xz ; \
-#do \
-#tar -xJf $f -C /tools ; \
-#done ; \
 cd /data/src/klayout && rm -rf build ; \
 ./build.sh -qt5 -release -build build -prefix /tools/klayout-0.27.10 -j2 ; \
 source /opt/rh/devtoolset-11/enable ; \
@@ -92,6 +88,9 @@ make clean && make -j2 && make install ; \
 cd /data/src/verilator ; \
 autoconf && ./configure --prefix /tools/verilator-$d ; \
 make clean && make -j2 && make install ; \
+cd /data/src/zlib-1.2.12 ; \
+./configure --prefix=/tools/zlib-1.2.12 ; \
+make clean && make -j2 && make install ; \
 cd / ; \
 tar -cJf /data/release/centos/klayout-0.27.10.tar.xz -C /tools klayout-0.27.10 ; \
 tar -cJf /data/release/centos/lemon-1.3.1.tar.xz     -C /tools lemon-1.3.1     ; \
@@ -112,5 +111,6 @@ tar -cJf /data/release/centos/OpenLane-$d.tar.xz     -C /tools OpenLane-$d     ;
 tar -cJf /data/release/centos/gtkwave-$d.tar.xz      -C /tools gtkwave-$d      ; \
 tar -cJf /data/release/centos/iverilog-$d.tar.xz     -C /tools iverilog-$d     ; \
 tar -cJf /data/release/centos/verilator-$d.tar.xz    -C /tools verilator-$d    ; \
+tar -cJf /data/release/centos/zlib-1.2.12.tar.xz     -C /tools zlib-1.2.12     ; \
 rm -rf /tools
 CMD ["/usr/sbin/init"]
