--- a/Dockerfile.openeuler
+++ b/Dockerfile.openeuler
@@ -2,10 +2,6 @@ FROM docker.io/lanfanb/siqbase:openeuler.latest
 RUN mkdir /tools ; \
 export TZ="Asia/Shanghai" ; \
 export d=$(date +'%Y.%m.%d') ; \
-#for f in /data/release/openeuler/*.tar.xz ; \
-#do \
-#tar -xJf $f -C /tools ; \
-#done ; \
 cd /data/src/klayout && rm -rf build ; \
 ./build.sh -qt5 -release -build build -prefix /tools/klayout-0.27.10 -j2 ; \
 cd /data/src/lemon && rm -rf build && mkdir build && cd build ; \
@@ -53,12 +49,12 @@ make clean && make -j2 && make install ; \
 export PATH=$OLDPATH ; \
 cd /data/src/OpenLane ; \
 mkdir -p /tools/OpenLane-$d/install ; \
-python -m venv --clear /tools/OpenLane-$d/install/venv ; \
+python3 -m venv --clear /tools/OpenLane-$d/install/venv ; \
 source /tools/OpenLane-$d/install/venv/bin/activate ; \
-pip install --trusted-host mirrors.tencentyun.com -i http://mirrors.tencentyun.com/pypi/simple --upgrade pip volare ; \
-pip install --trusted-host mirrors.tencentyun.com -i http://mirrors.tencentyun.com/pypi/simple -r dependencies/python/precompile_time.txt ; \
-pip install --trusted-host mirrors.tencentyun.com -i http://mirrors.tencentyun.com/pypi/simple -r dependencies/python/compile_time.txt ; \
-pip install --trusted-host mirrors.tencentyun.com -i http://mirrors.tencentyun.com/pypi/simple -r dependencies/python/run_time.txt ; \
+pip3 install --trusted-host mirrors.tencentyun.com -i http://mirrors.tencentyun.com/pypi/simple --upgrade pip volare ; \
+pip3 install --trusted-host mirrors.tencentyun.com -i http://mirrors.tencentyun.com/pypi/simple -r dependencies/python/precompile_time.txt ; \
+pip3 install --trusted-host mirrors.tencentyun.com -i http://mirrors.tencentyun.com/pypi/simple -r dependencies/python/compile_time.txt ; \
+pip3 install --trusted-host mirrors.tencentyun.com -i http://mirrors.tencentyun.com/pypi/simple -r dependencies/python/run_time.txt ; \
 deactivate ; \
 rsync -az scripts /tools/OpenLane-$d/ ; \
 rsync -az flow.tcl /tools/OpenLane-$d/ ; \
