--- a/Dockerfile.centos
+++ b/Dockerfile.centos
@@ -91,6 +91,9 @@ make clean && make -j2 && make install ; \
 cd /data/src/zlib-1.2.12 ; \
 CFLAGS=-fPIC ./configure --prefix=/tools/zlib-1.2.12 ; \
 make clean && make -j2 && make install ; \
+cd /data/src/qemu && rm -rf build && mkdir build && cd build ; \
+../configure --prefix=/tools/qemu-riscv64-7.0.0 --target-list=riscv64-softmmu,riscv64-linux-user ; \
+make -j2 && make install ; \
 cd / ; \
 tar -cJf /data/release/centos/klayout-0.27.10.tar.xz -C /tools klayout-0.27.10 ; \
 tar -cJf /data/release/centos/lemon-1.3.1.tar.xz     -C /tools lemon-1.3.1     ; \
@@ -112,5 +115,6 @@ tar -cJf /data/release/centos/gtkwave-$d.tar.xz      -C /tools gtkwave-$d      ;
 tar -cJf /data/release/centos/iverilog-$d.tar.xz     -C /tools iverilog-$d     ; \
 tar -cJf /data/release/centos/verilator-$d.tar.xz    -C /tools verilator-$d    ; \
 tar -cJf /data/release/centos/zlib-1.2.12.tar.xz     -C /tools zlib-1.2.12     ; \
+tar -cJf /data/release/centos/qemu-riscv64-7.0.0.tar.xz -C /tools qemu-riscv64-7.0.0 ; \
 rm -rf /tools
 CMD ["/usr/sbin/init"]
