--- a/Dockerfile.centos
+++ b/Dockerfile.centos
@@ -1,3 +1,4 @@
 FROM docker.io/lanfanb/siqbase:centos.latest 
-RUN /data/src/tools/exec.sh centos
+RUN /data/src/tools/exec_python.sh centos ; \
+/data/src/tools/exec.sh centos
 CMD ["/usr/sbin/init"]
