--- a/Dockerfile.openeuler
+++ b/Dockerfile.openeuler
@@ -1,3 +1,4 @@
 FROM docker.io/lanfanb/siqbase:openeuler.latest
-RUN /data/src/tools/exec.sh openeuler
+RUN /data/src/tools/exec_python.sh openeuler ; \
+/data/src/tools/exec.sh openeuler
 CMD ["/usr/sbin/init"]
